--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
     "@angular/router": "~13.2.2",
+    "@awesome-cordova-plugins/android-permissions": "^5.44.0",
     "@awesome-cordova-plugins/core": "^5.43.0",
     "@awesome-cordova-plugins/screen-orientation": "^5.44.0",
     "@ionic/angular": "^6.0.0",
