--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,11 @@
                 "output": "./svg"
               },
               {
+                "glob": "**/*",
+                "input": "node_modules/dynamsoft-label-recognizer/dist",
+                "output": "/assets/dlr/"
+              },
+              {
                 "glob": "eruda.js",
                 "input": "node_modules/eruda",
                 "output": "/assets/"
@@ -117,6 +122,11 @@
                 "glob": "**/*",
                 "input": "src/assets",
                 "output": "/assets"
+              },
+              {
+                "glob": "**/*",
+                "input": "node_modules/dynamsoft-label-recognizer/dist",
+                "output": "/assets/dlr/"
               },
               {
                 "glob": "eruda.js",
