--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dynamsoft-camera-enhancer": "^3.0.1",
     "dynamsoft-label-recognizer": "^2.2.11",
     "eruda": "^2.5.0",
+    "mrz": "^3.1.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
