--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cordova-ios": "^6.2.0",
     "cordova-plugin-android-permissions": "^1.1.3",
     "cordova-plugin-device": "2.0.2",
+    "cordova-plugin-gcdwebserver": "file:../cordova-plugin-gcdwebserver",
     "cordova-plugin-ionic-keyboard": "^2.0.5",
     "cordova-plugin-ionic-webview": "^5.0.0",
     "cordova-plugin-screen-orientation": "^3.0.2",
@@ -83,7 +84,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-screen-orientation": {},
-      "cordova-plugin-android-permissions": {}
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-gcdwebserver": {}
     },
     "platforms": [
       "android",
