--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@awesome-cordova-plugins/screen-orientation": "^5.44.0",
     "@ionic/angular": "^6.0.0",
     "@ionic/cordova-builders": "^6.1.0",
+    "awesome-cordova-plugin-gcdwebserver": "file:../awesome-cordova-plugin-gcdwebserver",
     "dynamsoft-camera-enhancer": "^3.0.1",
     "dynamsoft-label-recognizer": "^2.2.11",
     "eruda": "^2.5.0",
